Add SecurityAspect Add Secured annotation Add Role enum Modify OperationType enum Secure ADD and EDIT methods